--- a/pass/templates/base.html
+++ b/pass/templates/base.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>{% block title %}P Fiend{% endblock title %}</title>
+    <title>{% block title %}Password{% endblock title %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
